--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.525.0",
     "mapbox-gl": "^3.13.0",
     "react": "^19.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.1.0",
     "react-map-gl": "^8.0.4",
     "react-router-dom": "^7.6.3",
