--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-map-gl": "^8.0.4",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
